--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -72,6 +72,7 @@
         android:text="Welding Assistant"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
+        android:visibility="visible"
         app:cornerRadius="20dp"
         app:icon="@android:drawable/ic_menu_info_details"
         app:iconSize="46dp"
